--- a/src/eda/eda.ipynb
+++ b/src/eda/eda.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "eed98c34",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: [wandb.login()] Loaded credentials for https://api.wandb.ai from /Users/tarynnthompson/.netrc.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mttho751\u001b[0m (\u001b[33mttho751-western-governors-university\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
     {
      "data": {
       "text/html": [],
@@ -25,27 +33,72 @@
      "output_type": "display_data"
     },
     {
-     "ename": "CommError",
-     "evalue": "Error uploading run: returned error 403: {\"data\":{\"upsertBucket\":null},\"errors\":[{\"message\":\"Personal entities are disabled, please log to a different team\",\"path\":[\"upsertBucket\"],\"extensions\":{\"code\":\"PERMISSION_ERROR\"}}]}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mCommError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Note that we use save_code=True in the call to wandb.init so the notebook is uploaded and versioned by W&B\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m run = \u001b[43mwandb\u001b[49m\u001b[43m.\u001b[49m\u001b[43minit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mentity\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mttho751\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnyc_airbnb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroup\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43meda\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_code\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\u001b[39;00m\n\u001b[32m      6\u001b[39m local_path = wandb.use_artifact(\u001b[33m\"\u001b[39m\u001b[33msample.csv:latest\u001b[39m\u001b[33m\"\u001b[39m).file()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/nyc_airbnb_dev/lib/python3.13/site-packages/wandb/sdk/wandb_init.py:1597\u001b[39m, in \u001b[36minit\u001b[39m\u001b[34m(entity, project, dir, id, name, notes, tags, config, config_exclude_keys, config_include_keys, allow_val_change, group, job_type, mode, force, reinit, resume, resume_from, fork_from, save_code, tensorboard, sync_tensorboard, monitor_gym, settings, anonymous)\u001b[39m\n\u001b[32m   1594\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m wl:\n\u001b[32m   1595\u001b[39m     wl._get_logger().exception(\u001b[33m\"\u001b[39m\u001b[33merror in wandb.init()\u001b[39m\u001b[33m\"\u001b[39m, exc_info=e)\n\u001b[32m-> \u001b[39m\u001b[32m1597\u001b[39m \u001b[43mget_sentry\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreraise\u001b[49m\u001b[43m(\u001b[49m\u001b[43me\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/nyc_airbnb_dev/lib/python3.13/site-packages/wandb/analytics/sentry.py:190\u001b[39m, in \u001b[36mSentry.reraise\u001b[39m\u001b[34m(self, exc)\u001b[39m\n\u001b[32m    188\u001b[39m _, _, tb = sys.exc_info()\n\u001b[32m    189\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m tb \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(exc, \u001b[33m\"\u001b[39m\u001b[33mwith_traceback\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m190\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exc.with_traceback(tb)\n\u001b[32m    191\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/nyc_airbnb_dev/lib/python3.13/site-packages/wandb/sdk/wandb_init.py:1580\u001b[39m, in \u001b[36minit\u001b[39m\u001b[34m(entity, project, dir, id, name, notes, tags, config, config_exclude_keys, config_include_keys, allow_val_change, group, job_type, mode, force, reinit, resume, resume_from, fork_from, save_code, tensorboard, sync_tensorboard, monitor_gym, settings, anonymous)\u001b[39m\n\u001b[32m   1577\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m run_settings.x_server_side_derived_summary:\n\u001b[32m   1578\u001b[39m     init_telemetry.feature.server_side_derived_summary = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1580\u001b[39m run = \u001b[43mwi\u001b[49m\u001b[43m.\u001b[49m\u001b[43minit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_settings\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrun_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrun_printer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1582\u001b[39m \u001b[38;5;66;03m# Set up automatic Weave integration if Weave is installed\u001b[39;00m\n\u001b[32m   1583\u001b[39m weave.setup(run_settings.entity, run_settings.project)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/nyc_airbnb_dev/lib/python3.13/site-packages/wandb/sdk/wandb_init.py:1033\u001b[39m, in \u001b[36m_WandbInit.init\u001b[39m\u001b[34m(self, settings, config, run_printer)\u001b[39m\n\u001b[32m   1030\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m result.run_result\n\u001b[32m   1032\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m error := ProtobufErrorHandler.to_exception(result.run_result.error):\n\u001b[32m-> \u001b[39m\u001b[32m1033\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m error\n\u001b[32m   1035\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m result.run_result.HasField(\u001b[33m\"\u001b[39m\u001b[33mrun\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m   1036\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m Error(\u001b[33m\"\u001b[39m\u001b[33mAssertion failed: run_result is missing the run field\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mCommError\u001b[39m: Error uploading run: returned error 403: {\"data\":{\"upsertBucket\":null},\"errors\":[{\"message\":\"Personal entities are disabled, please log to a different team\",\"path\":[\"upsertBucket\"],\"extensions\":{\"code\":\"PERMISSION_ERROR\"}}]}"
-     ]
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.24.0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/Users/tarynnthompson/PycharmProjects/PythonProject7/Project-Build-an-ML-Pipeline-Starter/src/eda/wandb/run-20260212_140004-ly0wqu9r</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ly0wqu9r' target=\"_blank\">warm-vortex-12</a></strong> to <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ly0wqu9r' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ly0wqu9r</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import wandb\n",
     "import pandas as pd\n",
     "# Note that we use save_code=True in the call to wandb.init so the notebook is uploaded and versioned by W&B\n",
-    "run = wandb.init(entity=\"ttho751\", project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
-    "#run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
+    "#run = wandb.init(entity=\"ttho751\", project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
+    "run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
     "local_path = wandb.use_artifact(\"sample.csv:latest\").file()\n",
     "df = pd.read_csv(local_path)"
    ]
@@ -594,7 +647,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">upbeat-leaf-2</strong> at: <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ex4fcvxs' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ex4fcvxs</a><br> View project at: <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">warm-vortex-12</strong> at: <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ly0wqu9r' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb/runs/ly0wqu9r</a><br> View project at: <a href='https://wandb.ai/ttho751-western-governors-university/nyc_airbnb' target=\"_blank\">https://wandb.ai/ttho751-western-governors-university/nyc_airbnb</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -606,7 +659,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20260211_160951-ex4fcvxs/logs</code>"
+       "Find logs at: <code>./wandb/run-20260212_140004-ly0wqu9r/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
